--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,12 @@
     // Use hover for the description of the existing attributes
     // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
     "version": "0.2.0",
+    "compounds": [
+        {
+            "name": "ASP.Net Core & Browser",
+            "configurations": [".NET Core Launch (web)", "Launch Chrome", "Chrome Attach", ".NET Core Attach"]
+        }
+    ],
     "configurations": [
         {
             "name": ".NET Core Launch (web)",
@@ -16,7 +22,7 @@
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "launchBrowser": {
-                "enabled": true,
+                "enabled": false,
                 "args": "${auto-detect-url}",
                 "windows": {
                     "command": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe",
@@ -39,12 +45,19 @@
             }
         },
         {
+            "name": "Launch Chrome",
+            "type": "chrome",
+            "request": "launch",
+            "url": "http://localhost:5000/",
+            "webRoot": "${workspaceFolder}/Source/WorldSimulator2D_IDE/wwwroot"
+        },
+        {
             "name": "Chrome Attach",
             "type": "chrome",
             "request": "attach",
             "port": 9222,
             "sourceMaps": true,
-            "url": "${auto-detect-url}",
+            "url": "http://localhost:5000/",
             "webRoot": "${workspaceFolder}/Source/WorldSimulator2D_IDE/wwwroot"
         },
         {
